// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependencyConfig - BlankLib (Ignore react-native.config.js) 1`] = `null`;

exports[`dependencyConfig - BlankLib (Use react-native.config.js) 1`] = `null`;

exports[`dependencyConfig - MissingProjectFilesLib (Ignore react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "MissingProjectFilesLib",
  "nugetPackages": Array [],
  "projects": Array [],
  "solutionFile": null,
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - MissingProjectFilesLib (Use react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "MissingProjectFilesLib",
  "nugetPackages": Array [],
  "projects": Array [],
  "solutionFile": null,
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCSharpApp (Ignore react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCSharpApp",
  "nugetPackages": Array [],
  "projects": ArrayContaining [
    ObjectContaining {
      "projectFile": StringMatching /Error: \\.\\*\\\\\\.\\(\\?:cs\\|vcx\\)proj is type '\\\\w\\+'/,
    },
  ],
  "solutionFile": "SimpleCSharpApp.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCSharpApp (Use react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCSharpApp",
  "nugetPackages": Array [],
  "projects": ArrayContaining [
    ObjectContaining {
      "projectFile": StringMatching /Error: \\.\\*\\\\\\.\\(\\?:cs\\|vcx\\)proj is type '\\\\w\\+'/,
    },
  ],
  "solutionFile": "SimpleCSharpApp.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCSharpLib (Ignore react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCSharpLib",
  "nugetPackages": Array [],
  "projects": Array [
    Object {
      "cppHeaders": Array [
        "winrt/SimpleCSharpLib.h",
      ],
      "cppPackageProviders": Array [
        "SimpleCSharpLib::ReactPackageProvider",
      ],
      "csNamespaces": Array [
        "SimpleCSharpLib",
      ],
      "csPackageProviders": Array [
        "SimpleCSharpLib.ReactPackageProvider",
      ],
      "directDependency": true,
      "projectFile": "SimpleCSharpLib\\\\SimpleCSharpLib.csproj",
      "projectGuid": "{416476D5-974A-4EE2-8145-4E331297247E}",
      "projectLang": "cs",
      "projectName": "SimpleCSharpLib",
    },
  ],
  "solutionFile": "SimpleCSharpLib.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCSharpLib (Use react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCSharpLib",
  "nugetPackages": Array [],
  "projects": Array [
    Object {
      "cppHeaders": Array [
        "winrt/SimpleCSharpLib.h",
      ],
      "cppPackageProviders": Array [
        "SimpleCSharpLib::ReactPackageProvider",
      ],
      "csNamespaces": Array [
        "SimpleCSharpLib",
      ],
      "csPackageProviders": Array [
        "SimpleCSharpLib.ReactPackageProvider",
      ],
      "directDependency": true,
      "projectFile": "SimpleCSharpLib\\\\SimpleCSharpLib.csproj",
      "projectGuid": "{416476D5-974A-4EE2-8145-4E331297247E}",
      "projectLang": "cs",
      "projectName": "SimpleCSharpLib",
    },
  ],
  "solutionFile": "SimpleCSharpLib.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCppApp (Ignore react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCppApp",
  "nugetPackages": Array [],
  "projects": ArrayContaining [
    ObjectContaining {
      "projectFile": StringMatching /Error: \\.\\*\\\\\\.\\(\\?:cs\\|vcx\\)proj is type '\\\\w\\+'/,
    },
  ],
  "solutionFile": "SimpleCppApp.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCppApp (Use react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCppApp",
  "nugetPackages": Array [],
  "projects": ArrayContaining [
    ObjectContaining {
      "projectFile": StringMatching /Error: \\.\\*\\\\\\.\\(\\?:cs\\|vcx\\)proj is type '\\\\w\\+'/,
    },
  ],
  "solutionFile": "SimpleCppApp.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCppLib (Ignore react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCppLib",
  "nugetPackages": Array [],
  "projects": Array [
    Object {
      "cppHeaders": Array [
        "winrt/SimpleCppLib.h",
      ],
      "cppPackageProviders": Array [
        "SimpleCppLib::ReactPackageProvider",
      ],
      "csNamespaces": Array [
        "SimpleCppLib",
      ],
      "csPackageProviders": Array [
        "SimpleCppLib.ReactPackageProvider",
      ],
      "directDependency": true,
      "projectFile": "SimpleCppLib\\\\SimpleCppLib.vcxproj",
      "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
      "projectLang": "cpp",
      "projectName": "SimpleCppLib",
    },
  ],
  "solutionFile": "SimpleCppLib.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - SimpleCppLib (Use react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "SimpleCppLib",
  "nugetPackages": Array [],
  "projects": Array [
    Object {
      "cppHeaders": Array [
        "winrt/SimpleCppLib.h",
      ],
      "cppPackageProviders": Array [
        "SimpleCppLib::ReactPackageProvider",
      ],
      "csNamespaces": Array [
        "SimpleCppLib",
      ],
      "csPackageProviders": Array [
        "SimpleCppLib.ReactPackageProvider",
      ],
      "directDependency": true,
      "projectFile": "SimpleCppLib\\\\SimpleCppLib.vcxproj",
      "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
      "projectLang": "cpp",
      "projectName": "SimpleCppLib",
    },
  ],
  "solutionFile": "SimpleCppLib.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - WithIndirectDependency (Ignore react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "WithIndirectDependency",
  "nugetPackages": Array [],
  "projects": Array [],
  "solutionFile": "WithIndirectDependency.sln",
  "sourceDir": "windows",
}
`;

exports[`dependencyConfig - WithIndirectDependency (Use react-native.config.js) 1`] = `
Object {
  "folder": StringContaining "WithIndirectDependency",
  "nugetPackages": Array [],
  "projects": Array [
    Object {
      "cppHeaders": Array [
        "winrt/WithIndirectDependency.h",
      ],
      "cppPackageProviders": Array [
        "WithIndirectDependency::ReactPackageProvider",
      ],
      "csNamespaces": Array [
        "WithIndirectDependency",
      ],
      "csPackageProviders": Array [
        "WithIndirectDependency.ReactPackageProvider",
      ],
      "directDependency": true,
      "projectFile": "WithIndirectDependency\\\\WithIndirectDependency.vcxproj",
      "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
      "projectLang": "cpp",
      "projectName": "WithIndirectDependency",
    },
    Object {
      "directDependency": false,
      "projectFile": "IndirectDependency\\\\IndirectDependency.vcxproj",
      "projectGuid": "{416476d5-974a-4ee2-8145-4e331297247e}",
      "projectLang": "cpp",
      "projectName": "IndirectDependency",
    },
  ],
  "solutionFile": "WithIndirectDependency.sln",
  "sourceDir": "windows",
}
`;
